--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"/>
+    <Button
+        android:layout_centerVertical="true"
+        android:id="@+id/register_table"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register Table"/>
 </RelativeLayout>
